# tweetArchives

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
data/2021/February/: get-users-id-tweets_2021-02-01.json  get-users-id-tweets_2021-02-02.json  get-users-id-tweets_2021-02-03.json  get-users-id-tweets_2021-02-04.json  get-users-id-tweets_2021-02-05.json  get-users-id-tweets_2021-02-06.json  get-users-id-tweets_2021-02-07.json  get-users-id-tweets_2021-02-08.json  get-users-id-tweets_2021-02-09.json  get-users-id-tweets_2021-02-10.json  get-users-id-tweets_2021-02-11.json  get-users-id-tweets_2021-02-12.json  get-users-id-tweets_2021-02-13.json  get-users-id-tweets_2021-02-14.json  get-users-id-tweets_2021-02-15.json  get-users-id-tweets_2021-02-16.json  get-users-id-tweets_2021-02-17.json  get-users-id-tweets_2021-02-18.json  get-users-id-tweets_2021-02-19.json  get-users-id-tweets_2021-02-20.json  get-users-id-tweets_2021-02-21.json  get-users-id-tweets_2021-02-22.json  get-users-id-tweets_2021-02-23.json  get-users-id-tweets_2021-02-24.json  get-users-id-tweets_2021-02-25.json  get-users-id-tweets_2021-02-26.json  get-users-id-tweets_2021-02-27.json  get-users-id-tweets_2021-02-28.json
data/2021/January/: get-users-id-tweets_2021-01-01.json  get-users-id-tweets_2021-01-02.json  get-users-id-tweets_2021-01-03.json  get-users-id-tweets_2021-01-04.json  get-users-id-tweets_2021-01-05.json  get-users-id-tweets_2021-01-06.json  get-users-id-tweets_2021-01-07.json  (+24 more)
src/: main.py
tests/: results.xml  test_main.py
(+2 files in other folders)
