[tool.poetry]
name = "tweet-archive-periodically"
version = "0.0.1"
description = "Archive tweets your own"
authors = ["Ningensei848"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
python-dotenv = "^0.15.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v --capture=no --cov=src --cov-report=html"
testpaths = [
    "./tests"
]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
